refactor(spell): Remove spell table
